--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,8 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+  display: flex;
+  width: 100%;
+  height: 100%;
 }
 
 .App-header {
