--- a/src/components/assessment/assessment.component.css
+++ b/src/components/assessment/assessment.component.css
@@ -1,5 +1,5 @@
-.dashboard-container {
+.assessment-container {
     background-color: aliceblue;
-    width: 70%;
+    width: 100%;
     height: 100%;
 }
