--- a/src/components/navBar/navBar.component.css
+++ b/src/components/navBar/navBar.component.css
@@ -1,5 +1,64 @@
 .navBar-container {
-    background-color: grey;
+    background-color: #101010;
     width: 100%;
     height: 100%;
+    display: block;
 }
+
+.inner-navBar-container {
+     width: 90%;
+     height: 100%;
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
+     margin: 0 auto;
+     background-color:black;
+}
+
+.logo-container {
+     height: 100%;
+     display: table;
+     width: 50%;
+}
+
+.logo-container img {
+    float: left;
+    display: table-cell;
+    color: white;
+    vertical-align: bottom;
+}
+
+.logo-container h1 {
+    height: 100%;
+    float: right;
+    display: table-cell;
+    color: white;
+    vertical-align: middle;
+    font-family: "MontSerrat";
+    font-size: 32px;
+    font-weight: 200;
+}
+
+.navigation {
+    float: right;
+    height: 100%;
+}
+ .navigation a {
+     height: 100%;
+     display: table;
+     float: left;
+     padding: 0px 20px;
+ }
+ .navigation a li {
+     display: table-cell;
+     vertical-align: middle;
+     height: 100%;
+     color: white;
+     font-family: "MontSerrat";
+     font-size: 16px;
+ }
+
+ .navigation a:last-child {
+     padding: 0%;
+ }
+
